fix(style): wrap `theme` tailwind function parameters with `'` single quotation mark;

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,5 +58,5 @@ body,
   left: 250px;
   z-index: 3;
   border-radius: 90rem;
-  background-color: theme(colors.img.circle);
+  background-color: theme('colors.img.circle');
 }
