--- a/styles/layouts/summary.module.css
+++ b/styles/layouts/summary.module.css
@@ -1,5 +1,5 @@
 .summaryCoverWrapper::before {
-  background-color: theme(colors.img.square-2);
+  background-color: theme('colors.img.square-2');
 }
 
 .summaryCoverImage {
